--- a/CHSAuction/CHSAuction.csproj
+++ b/CHSAuction/CHSAuction.csproj
@@ -201,6 +201,7 @@
     <None Include="Properties\PublishProfiles\CHSAuction - Web Deploy %285%29.pubxml" />
     <None Include="Properties\PublishProfiles\CHSAuction - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\dev3-soulia - Web Deploy.pubxml" />
+    <Content Include="README.md" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
