--- a/CHSAuction/Web.config
+++ b/CHSAuction/Web.config
@@ -21,7 +21,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
-    <customErrors mode="Off"/>
+    <customErrors mode="RemoteOnly"/>
   </system.web>
   <system.webServer>
     <modules>
